2013-03-05  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/primitive/extract/lines_discontinued.hh: Add a missing
	call to exact().

2013-03-05  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/primitive/extract/lines_discontinued.hh: Fix invalid line
	reconstruction.

2013-03-05  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/subsampling/bilinear.hh: Update documentation.

2013-03-05  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/io/img/save.hh: Add an optional reduction factor.

2013-02-26  Guillaume Lazzara  <z@lrde.epita.fr>

	* tests/unit_test/unit-tests.mk: Update.

2013-02-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix call to text_in_doc_preprocess().

	* src/content_in_hdoc.cc,
	* src/contest/hdlac-2011/content_in_hdoc_hdlac.cc,
	* src/non_text_components.cc,
	* src/text_in_doc_preprocess.cc: Here.

2013-02-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix various warnings.

	* scribo/binarization/otsu_threshold.hh: Fix comparisons between
	different types.

	* scribo/io/xml/load.hh: Convert to float.

	* scribo/text/paragraphs_closing.hh,
	* scribo/text/recognition.hh,
	* src/afp/components.hh: Remove unused variables.

	* src/binarization/otsu.cc: Silent warning.

	* src/misc/morpho.cc: Check number of arguments.

2013-02-26  Guillaume Lazzara  <z@lrde.epita.fr>

	* common.mk: Fix include paths order.

2012-11-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Save full size region debug image.

	* src/content_in_doc.cc: Set output format to DebugWithImage.

	* scribo/io/img/save.hh: Do not subsample output image.

2012-11-27  Guillaume Lazzara  <z@lrde.epita.fr>

	* src/content_in_doc.cc: Add more options.

2013-02-13  Roland Levillain  <roland@lrde.epita.fr>

	Simplify more Scribo Makefiles thanks to AM_DEFAULT_SOURCE_EXT.

	* src/binarization/Makefile.am,
	* src/contest/DAE-2011/Makefile.am,
	* src/contest/hdibco-2010/Makefile.am,
	* src/contest/hdlac-2011/Makefile.am,
	* src/postprocessing/Makefile.am,
	* src/primitive/remove/Makefile.am,